--- a/backend/static/admin.html
+++ b/backend/static/admin.html
@@ -2,15 +2,39 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="css/style.css">
 <title>SimpleLinks Admin Panel</title>
 <style>
-body { font-family: sans-serif; margin: 20px; background-color: #111; color: white; }
-input, button { margin: 5px; padding: 8px; }
-h1, h2 { text-align: center; }
-form { margin-bottom: 20px; }
-#linksTable { width: 100%; border-collapse: collapse; margin-top: 20px; }
-#linksTable td, #linksTable th { border: 1px solid #444; padding: 8px; text-align: left; }
-#linksTable th { background-color: #222; }
+  body { font-family: sans-serif; margin: 20px; background-color: #111; color: white; }
+  input, button, select { margin: 5px; padding: 8px; }
+  h1, h2 { text-align: center; }
+  form { margin-bottom: 20px; }
+  #linksTable { width: 100%; border-collapse: collapse; margin-top: 20px; }
+  #linksTable td, #linksTable th { border: 1px solid #444; padding: 8px; text-align: left; }
+  #linksTable th { background-color: #222; }
+  #linksTable img { max-width: 80px; }
+  #editPanel { background: #222; padding: 10px; margin-top: 20px; border: 1px solid #666; }
+
+/* make links in the grid more visible */
+
+a:link {
+  color: red;
+}
+
+/* visited link */
+a:visited {
+  color: green;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
 </style>
 </head>
 <body>
@@ -24,33 +48,77 @@ form { margin-bottom: 20px; }
   <input type="text" id="type" placeholder="Type">
   <input type="text" id="comment" placeholder="Comment">
   <input type="file" id="imageFile" accept="image/*">
+  <select id="existingImage"></select>
   <button type="submit">Add Link</button>
 </form>
 
-<!-- Delete Link Form -->
-<h2>Delete Link</h2>
-<form id="deleteForm">
-  <input type="number" id="deleteIndex" placeholder="Index #" required>
-  <button type="submit">Delete Link</button>
-</form>
-
-<!-- Links Table -->
+<!-- Current Links -->
 <h2>Current Links</h2>
 <table id="linksTable">
   <thead>
     <tr>
-      <th>Index</th>
       <th>URL</th>
       <th>Type</th>
       <th>Comment</th>
       <th>Image</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody></tbody>
 </table>
 
+<!-- Edit Panel Modal -->
+<div id="editPanel" class="modal">
+  <div class="modal-content">
+    <h3>Edit Link</h3>
+    <input type="hidden" id="editIndex">
+    <input type="text" id="editUrl" placeholder="URL"><br>
+    <input type="text" id="editType" placeholder="Type"><br>
+    <input type="text" id="editComment" placeholder="Comment"><br>
+    <input type="file" id="editFile" accept="image/*"><br>
+    <select id="editImage"></select><br><br>
+    <button onclick="saveEdit()">Save</button>
+    <button onclick="closeEdit()">Cancel</button>
+  </div>
+</div>
+
+<style>
+  .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; 
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background-color: rgba(0,0,0,0.7);
+  }
+  .modal-content {
+    background: #222;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #666;
+    width: 400px;
+    color: white;
+    border-radius: 8px;
+  }
+</style>
+
+
 <script>
-// --- Load Links ---
+// --- Load existing images into Add Link form ---
+async function loadImageOptions() {
+  const resp = await fetch("/images-list");
+  const images = await resp.json();
+  const select = document.getElementById("existingImage");
+  select.innerHTML = `<option value="">-- choose existing --</option>`;
+  images.forEach(img => {
+    const option = document.createElement("option");
+    option.value = img;
+    option.textContent = img.split("/").pop();
+    select.appendChild(option);
+  });
+}
+
+// --- Load links into table ---
 async function loadLinks() {
   const resp = await fetch("/links");
   const links = await resp.json();
@@ -59,11 +127,14 @@ async function loadLinks() {
   links.forEach((link, idx) => {
     const tr = document.createElement("tr");
     tr.innerHTML = `
-      <td>${idx}</td>
       <td><a href="${link.url}" target="_blank">${link.url}</a></td>
       <td>${link.type || ""}</td>
       <td>${link.comment || ""}</td>
-      <td>${link.image ? `<img src="${link.image}" width="80">` : ""}</td>
+      <td>${link.image ? `<img src="${link.image}">` : ""}</td>
+      <td>
+        <button onclick="showEdit(${idx})">Edit</button>
+        <button onclick="deleteLink(${idx})">Delete</button>
+      </td>
     `;
     tbody.appendChild(tr);
   });
@@ -76,14 +147,12 @@ document.getElementById("addForm").addEventListener("submit", async (e) => {
   const type = document.getElementById("type").value;
   const comment = document.getElementById("comment").value;
   const fileInput = document.getElementById("imageFile");
+  let imagePath = document.getElementById("existingImage").value;
 
-  let imagePath = "";
-
-  // Upload image if selected
+  // If uploading a new file
   if (fileInput.files.length > 0) {
     const formData = new FormData();
     formData.append("file", fileInput.files[0]);
-
     const uploadResp = await fetch("/upload", { method: "POST", body: formData });
     if (uploadResp.ok) {
       const result = await uploadResp.json();
@@ -94,37 +163,108 @@ document.getElementById("addForm").addEventListener("submit", async (e) => {
     }
   }
 
-  // Add link
+  if (!imagePath) imagePath = "images/default.png";
+
   const addResp = await fetch("/links", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ url, type, comment, image: imagePath })
   });
+
   if (addResp.ok) {
-    alert("Link added!");
     loadLinks();
     document.getElementById("addForm").reset();
+    loadImageOptions();
   } else {
     alert("Failed to add link");
   }
 });
 
 // --- Delete Link ---
-document.getElementById("deleteForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const index = document.getElementById("deleteIndex").value;
+async function deleteLink(index) {
+  if (!confirm("Delete this link?")) return;
   const resp = await fetch(`/links/${index}`, { method: "DELETE" });
-  if (resp.ok) {
-    alert("Link deleted!");
-    loadLinks();
-    document.getElementById("deleteForm").reset();
-  } else {
-    alert("Failed to delete link");
+  if (resp.ok) loadLinks();
+  else alert("Failed to delete link");
+}
+
+// --- Show Edit Panel ---
+function showEdit(index) {
+  fetch("/links").then(r => r.json()).then(async links => {
+    const link = links[index];
+    if (!link) return;
+
+    document.getElementById("editPanel").style.display = "block";
+    document.getElementById("editIndex").value = index;
+    document.getElementById("editUrl").value = link.url;
+    document.getElementById("editType").value = link.type;
+    document.getElementById("editComment").value = link.comment;
+
+    // Populate image dropdown
+    const select = document.getElementById("editImage");
+    const imagesResp = await fetch("/images-list");
+    const images = await imagesResp.json();
+    select.innerHTML = `<option value="">-- none --</option>`;
+    images.forEach(img => {
+      const option = document.createElement("option");
+      option.value = img;
+      option.textContent = img.split("/").pop();
+      select.appendChild(option);
+    });
+    select.value = link.image || "";
+  });
+}
+
+function closeEdit() {
+  document.getElementById("editPanel").style.display = "none";
+}
+
+// --- Save Edit ---
+async function saveEdit() {
+  const index = document.getElementById("editIndex").value;
+  let imagePath = document.getElementById("editImage").value;
+
+  const fileInput = document.getElementById("editFile");
+  if (fileInput.files.length > 0) {
+    const formData = new FormData();
+    formData.append("file", fileInput.files[0]);
+    const uploadResp = await fetch("/upload", { method: "POST", body: formData });
+    if (uploadResp.ok) {
+      const result = await uploadResp.json();
+      imagePath = result.path;
+    } else {
+      alert("Image upload failed");
+      return;
+    }
   }
-});
+
+  if (!imagePath) imagePath = "images/default.png";
+
+  const updateResp = await fetch(`/links/${index}`, {
+    method: "PUT",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      url: document.getElementById("editUrl").value,
+      type: document.getElementById("editType").value,
+      comment: document.getElementById("editComment").value,
+      image: imagePath
+    })
+  });
+
+  if (updateResp.ok) {
+    document.getElementById("editPanel").style.display = "none";
+    loadLinks();
+    loadImageOptions();
+  } else {
+    alert("Failed to update link");
+  }
+}
 
 // --- Initial load ---
-loadLinks();
+window.addEventListener("DOMContentLoaded", () => {
+  loadLinks();
+  loadImageOptions();
+});
 </script>
 
 </body>
