--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -2,165 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Rich's Internal Links</title>
   <link rel="icon" type="image/x-icon" href="/images/link.png">
-
-
-<style>
-  body {
-    font-family: sans-serif;
-    margin: 20px;
-    background-color: black;
-    color: white;
-  }
-.light-mode {
-  background-color: white;
-  color: black;
-}
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-  td {
-    text-align: center;
-    padding: 20px;
-    vertical-align: top;
-    width: 25%; /* 4 columns = 25% width each */
-  }
-
-  img {
-    width: 380px;     /* Make image larger */
-    height: auto;
-    display: block;
-    margin: 0 auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  }
-  h1 {
-    text-align: center;
-  }
-  a.comment {
-    display: block;
-    margin-top: 10px;
-    font-size: 20px;
-    color: #d1cfcf;
-    text-decoration: none;
-    text-align: center;
-  }
-
-  a.comment:hover {
-    color: #007acc;
-  }
-  
-  img:hover {
-  transform: scale(1.05);
-  transition: transform 0.2s ease;
-}
-
-
-.topnav {
-  overflow: hidden;
-  background-color: #0d4080;
-  border-radius: 25px;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 25px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.topnav .search-container {
-  float: right;
-}
-
-
-.topnav input[type=submit] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-
-.topnav .search-container button:hover {
-  background: #ccc;
-}
-
-.richnav {
-  overflow: hidden;
-  background-color: #004080;
-  border-radius: 25px;
-
-}
-
-.richnav a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 4px 4px;
-  text-decoration: none;
-  font-size: 20px;
-}
-
-.richnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.richnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.button {
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 25px;
-}
-.button1 {background-color: #04AA6D;} /* Green */
-.button2 {background-color: #008CBA;} /* Blue */
-
-a.two:link {color:white;}
-a.two:link {font-size:25px;}
-a.two:visited {color:blue;}
-a.two:hover {font-size:30px;}
-a.two:hover {color:Aqua;}
-}
-
-</style>
 
 </head>
 <body>
