--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -140,7 +140,12 @@
     }
   });
 </script>
-
+<script>
+function myFunction() {
+   var element = document.body;
+   element.classList.toggle("light-mode");
+}
+</script>
 
 </body>
 </html>
